Update to 1.5.9 to add bundle: URI to configURL support.